# simple_task_manager

./: .gitignore  README.md  requirements.txt  setup.cfg
app/: __init__.py  main.py
