[metadata]
name = task_manager
version = 0.0.1
url = https://github.com/nachoregulardude/task_manager
author = nachoregulardude
author_email = gbharathcis@gmail.com

[options]
packages = find:

[options.packages.find]
exclude = test*

[options.entry_points]
console_scripts =
    task = app.main:main
